<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <ImageView
        android:id="@+id/video_thumb_image"
        android:layout_width="298dp"
        android:layout_height="180dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/trailer_thumb_image" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@color/colorTransparent"
        app:layout_constraintBottom_toBottomOf="@+id/video_thumb_image"
        app:layout_constraintEnd_toEndOf="@+id/video_thumb_image"
        app:layout_constraintStart_toStartOf="@+id/video_thumb_image" />

    <TextView
        android:id="@+id/trailer_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/trailer_name"
        app:layout_constraintEnd_toEndOf="@+id/video_thumb_image"
        app:layout_constraintStart_toStartOf="@+id/video_thumb_image"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_play"
        android:elevation="20dp"
        android:contentDescription="@string/trailer_play_button" />

    <ImageView
        android:id="@+id/trailer_share_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_share"
        android:contentDescription="@string/trailer_share_button" />
</android.support.constraint.ConstraintLayout>