<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true">

    <data>

        <variable
            name="movie"
            type="com.github.johntinashe.popularmovies.model.Movie" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:fitsSystemWindows="true">

            <android.support.design.widget.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
                app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"
                app:toolbarId="@+id/toolbar">

                <ImageView
                    android:id="@+id/app_bar_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backdropPath="@{movie.backdropPath}"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/image_drawable" />

            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/nested_scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/movie_poster"
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/movie_poster"
                    android:elevation="15dp"
                    android:posterPath="@{movie.posterPath}"
                    android:scaleType="centerCrop"
                    android:transitionName="posterImage"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/movie_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@{movie.title}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    app:layout_constraintEnd_toStartOf="@+id/add_to_fav_btn"
                    app:layout_constraintStart_toEndOf="@+id/movie_poster"
                    app:layout_constraintTop_toTopOf="@+id/movie_poster" />

                <TextView
                    android:id="@+id/movie_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{movie.releaseDate}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintStart_toStartOf="@+id/movie_title"
                    app:layout_constraintTop_toBottomOf="@+id/movie_title" />

                <me.zhanghai.android.materialratingbar.MaterialRatingBar
                    android:id="@+id/materialRatingBar"
                    style="@style/Widget.MaterialRatingBar.RatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:clickable="false"
                    android:voteAverage="@{movie.voteAverage}"
                    app:layout_constraintStart_toEndOf="@+id/movie_poster"
                    app:layout_constraintTop_toBottomOf="@+id/movie_lang" />

                <me.gujun.android.taggroup.TagGroup
                    android:id="@+id/tag_group"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/movie_poster"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/movie_poster"
                    app:layout_constraintTop_toBottomOf="@+id/materialRatingBar" />

                <TextView
                    android:id="@+id/movie_plot"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@{movie.overview}"
                    android:textSize="17sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/movie_poster"
                    app:layout_constraintTop_toBottomOf="@+id/movie_poster" />

                <TextView
                    android:id="@+id/movie_lang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@{movie.originalLanguage}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintBottom_toBottomOf="@+id/movie_date"
                    app:layout_constraintStart_toEndOf="@+id/movie_date"
                    app:layout_constraintTop_toTopOf="@+id/movie_date" />

                <TextView
                    android:id="@+id/cast_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/cast"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/movie_plot"
                    app:layout_constraintTop_toBottomOf="@+id/movie_plot" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/cast_recycler_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="@+id/movie_plot"
                    app:layout_constraintStart_toStartOf="@+id/cast_label"
                    app:layout_constraintTop_toBottomOf="@+id/cast_label" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:textSize="30sp"
                    android:voteAverage="@{movie.voteAverage}"
                    app:layout_constraintBottom_toBottomOf="@+id/materialRatingBar"
                    app:layout_constraintStart_toEndOf="@+id/materialRatingBar"
                    app:layout_constraintTop_toTopOf="@+id/materialRatingBar" />

                <TextView
                    android:id="@+id/trailer_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/trailer_s"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    app:layout_constraintStart_toStartOf="@+id/cast_label"
                    app:layout_constraintTop_toBottomOf="@+id/cast_recycler_view" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/trailers_recycler_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/cast_recycler_view"
                    app:layout_constraintTop_toBottomOf="@+id/trailer_label" />

                <TextView
                    android:id="@+id/review_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/reviews"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/trailers_recycler_view"
                    app:layout_constraintTop_toBottomOf="@+id/trailers_recycler_view" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/reviews_recycler_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/trailers_recycler_view"
                    app:layout_constraintTop_toBottomOf="@+id/review_label" />

                <ImageView
                    android:id="@+id/add_to_fav_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:clickable="true"
                    android:contentDescription="@string/add_to_fav_btn_description"
                    android:focusable="true"
                    app:layout_constraintBottom_toBottomOf="@+id/movie_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/movie_title"
                    app:srcCompat="@drawable/ic_favorite_border" />

            </android.support.constraint.ConstraintLayout>


        </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>
</layout>